# Work_FW_Essen_WIFI

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
components/control_led/: CMakeLists.txt  control_led.c  led_init.c
components/control_led/include/: control_led.h
components/control_relay/: CMakeLists.txt  control_relay.c
components/control_relay/include/: control_relay.h
components/encrypt/: CMakeLists.txt  encrypt_decrypt.c  parse_json.c  process_array.c
components/encrypt/include/: encrypt_decrypt.h
components/mqtt_wifi/: CMakeLists.txt  mqtt_wifi.c
components/mqtt_wifi/include/: mqtt_wifi.h
components/ota_wifi/: CMakeLists.txt  ota_wifi.c
components/ota_wifi/include/: ota_wifi.h
components/pzem/: CMakeLists.txt  pzem.c
components/pzem/include/: pzem.h
components/setup_wifi/: CMakeLists.txt  interface.html  setup_wifi.c  setup_wifi_interface.c
components/setup_wifi/include/: setup_wifi.h
config/: CMakeLists.txt  config_parameter.h
drivers/: CMakeLists.txt  gpio_cf.c  gpio_cf.h  uart.c  uart.h
main/: CMakeLists.txt  main.c  system_manage.c  system_manage.h
